# ChangeLog for app-editors/scite
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/scite/ChangeLog,v 1.101 2010/09/18 18:23:19 armin76 Exp $

  18 Sep 2010; Raúl Porcel <armin76@gentoo.org> scite-2.12.ebuild:
  sparc stable wrt #333447

  21 Aug 2010; Markos Chandras <hwoarang@gentoo.org> scite-2.12.ebuild:
  Stable on amd64 wrt bug #333447

  20 Aug 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> scite-2.12.ebuild:
  x86 stable wrt bug #333447

*scite-2.20 (19 Aug 2010)

  19 Aug 2010; Krzysztof Pawlik <nelchael@gentoo.org> +scite-2.20.ebuild:
  Version bump.

*scite-2.12 (23 Jun 2010)

  23 Jun 2010; Krzysztof Pawlik <nelchael@gentoo.org> +scite-2.12.ebuild,
  +files/scite-2.12-install.patch, +files/scite-2.12-no-lua.patch:
  Version bump.

  19 May 2010; Krzysztof Pawlik <nelchael@gentoo.org> -scite-1.78.ebuild,
  -files/scite-1.78-install.patch, -files/scite-1.78-no-lua.patch,
  -scite-1.79.ebuild, -scite-2.00.ebuild, -scite-2.01.ebuild:
  Remove old versions.

  09 May 2010; Raúl Porcel <armin76@gentoo.org> scite-2.03.ebuild:
  sparc stable wrt #312851

*scite-2.11 (21 Apr 2010)

  21 Apr 2010; Krzysztof Pawlik <nelchael@gentoo.org> +scite-2.11.ebuild:
  Version bump.

  18 Apr 2010; <nixnut@gentoo.org> scite-2.03.ebuild:
  ppc stable #312851

  08 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> scite-2.03.ebuild:
  x86 stable wrt bug #312851

  05 Apr 2010; Markos Chandras <hwoarang@gentoo.org> scite-2.03.ebuild:
  Stable on amd64 wrt bug #312851

  05 Apr 2010; Krzysztof Pawlik <nelchael@gentoo.org> scite-2.03.ebuild:
  Add LDFLAGS to makefile.

*scite-2.03 (27 Feb 2010)

  27 Feb 2010; Krzysiek Pawlik <nelchael@gentoo.org> +scite-2.03.ebuild:
  Version bump.

*scite-2.01 (12 Dec 2009)

  12 Dec 2009; Krzysiek Pawlik <nelchael@gentoo.org> +scite-2.01.ebuild:
  Version bump.

*scite-2.00 (01 Sep 2009)

  01 Sep 2009; Patrick Lauer <patrick@gentoo.org> +scite-2.00.ebuild: