@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/scite
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/scite/ChangeLog,v 1.101 2010/09/18 18:23:19 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/scite/ChangeLog,v 1.102 2010/10/08 12:36:58 nelchael Exp $
+
+*scite-2.21 (08 Oct 2010)
+
+  08 Oct 2010; Krzysztof Pawlik <nelchael@gentoo.org> +scite-2.21.ebuild:
+  Version bump.
 
   18 Sep 2010; Raúl Porcel <armin76@gentoo.org> scite-2.12.ebuild:
   sparc stable wrt #333447
